DRY principles, Mutators and Accessors
